--- a/index.html
+++ b/index.html
@@ -27,6 +27,55 @@
           </div>
         </nav>
       </header>
+      <div class="col col_2 menu_layer">
+        <div class="col container_menu">
+          <div class="card">
+            <div class="col wrapper_card">
+              <div class="img_card">
+                <img
+                  src="./assets/shared/desktop/image-category-thumbnail-headphones.png"
+                  alt=""
+                />
+              </div>
+              <div class="title_card bold">headphones</div>
+              <a href="#" class="bold row"
+                >shop
+                <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="col wrapper_card">
+              <div class="img_card">
+                <img
+                  src="./assets/shared/desktop/image-category-thumbnail-speakers.png"
+                  alt=""
+                />
+              </div>
+              <div class="title_card bold">speakers</div>
+              <a href="#" class="bold row"
+                >shop
+                <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="col wrapper_card">
+              <div class="img_card">
+                <img
+                  src="./assets/shared/desktop/image-category-thumbnail-earphones.png"
+                  alt=""
+                />
+              </div>
+              <div class="title_card bold">earphones</div>
+              <a href="#" class="bold row"
+                >shop
+                <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="bg_hero">
         <img src="./assets/home/mobile/image-header.jpg" alt="" />
       </div>
