--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <img src="./assets/shared/desktop/logo.svg" alt="" />
             </div>
           </div>
-          <div class="cart">
+          <div class="cart_icon">
             <img src="./assets/shared/desktop/icon-cart.svg" alt="" />
           </div>
         </nav>
@@ -72,6 +72,76 @@
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="cart">
+        <div class="container_cart">
+          <div class="col col_14">
+            <div class="row row_3">
+              <p class="bold cart_items_number">cart (3)</p>
+              <p class="medium remove_all">Remove all</p>
+            </div>
+            <div class="col col_15">
+              <div class="row row_4">
+                <div class="row img_cart_item">
+                  <img
+                    src="./assets/product-xx99-mark-two-headphones/mobile/image-product.jpg"
+                    alt=""
+                  />
+                  <div class="col col_16">
+                    <p class="bold cart_product_name">xx99 mk ii</p>
+                    <p class="bold cart_product_price">$ 2,999</p>
+                  </div>
+                </div>
+                <div class="row row_5">
+                  <p class="bold quantity_minus">-</p>
+                  <p class="bold quantity">1</p>
+                  <p class="bold quantity_plus">+</p>
+                </div>
+              </div>
+              <div class="row row_4">
+                <div class="row img_cart_item">
+                  <img
+                    src="./assets/product-xx59-headphones/mobile/image-product.jpg"
+                    alt=""
+                  />
+                  <div class="col col_16">
+                    <p class="bold cart_product_name">xx59</p>
+                    <p class="bold cart_product_price">$ 899</p>
+                  </div>
+                </div>
+                <div class="row row_5">
+                  <p class="bold quantity_minus">-</p>
+                  <p class="bold quantity">2</p>
+                  <p class="bold quantity_plus">+</p>
+                </div>
+              </div>
+              <div class="row row_4">
+                <div class="row img_cart_item">
+                  <img
+                    src="./assets/product-yx1-earphones/mobile/image-product.jpg"
+                    alt=""
+                  />
+                  <div class="col col_16">
+                    <p class="bold cart_product_name">yx1</p>
+                    <p class="bold cart_product_price">$ 599</p>
+                  </div>
+                </div>
+                <div class="row row_5">
+                  <p class="bold quantity_minus">-</p>
+                  <p class="bold quantity">1</p>
+                  <p class="bold quantity_plus">+</p>
+                </div>
+              </div>
+            </div>
+            <div class="row row_6">
+              <p class="medium">total</p>
+              <p class="bold price">$ 5,396</p>
+            </div>
+            <div class="checkout_btn">
+              <a href="#" class="bold">checkout</a>
             </div>
           </div>
         </div>
