--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
               <span></span>
             </div>
             <div class="logo">
-              <img src="./assets/shared/desktop/logo.svg" alt="" />
+              <a href="/">
+                <img src="./assets/shared/desktop/logo.svg" alt="" />
+              </a>
             </div>
           </div>
           <div class="cart_icon">
@@ -38,7 +40,7 @@
                 />
               </div>
               <div class="title_card bold">headphones</div>
-              <a href="#" class="bold row"
+              <a href="/headphones" class="bold row"
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
@@ -53,7 +55,7 @@
                 />
               </div>
               <div class="title_card bold">speakers</div>
-              <a href="#" class="bold row"
+              <a href="/speakers" class="bold row"
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
@@ -68,7 +70,7 @@
                 />
               </div>
               <div class="title_card bold">earphones</div>
-              <a href="#" class="bold row"
+              <a href="/earphones" class="bold row"
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
