--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Audiophile e-commerce website</title>
   </head>
   <body>
-    <div id="hero" class="col">
-      <header>
+    <div id="root">
+      <header class="header">
         <nav class="row">
           <div class="row row_1">
             <div class="hamburger col">
@@ -19,7 +19,7 @@
               <span></span>
             </div>
             <div class="logo">
-              <a href="/">
+              <a href="/" class="link">
                 <img src="./assets/shared/desktop/logo.svg" alt="" />
               </a>
             </div>
@@ -40,7 +40,7 @@
                 />
               </div>
               <div class="title_card bold">headphones</div>
-              <a href="/headphones" class="bold row"
+              <a href="/headphones" class="bold row link"
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
@@ -55,7 +55,7 @@
                 />
               </div>
               <div class="title_card bold">speakers</div>
-              <a href="/speakers" class="bold row"
+              <a href="/speakers" class="bold row link"
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
@@ -70,7 +70,7 @@
                 />
               </div>
               <div class="title_card bold">earphones</div>
-              <a href="/earphones" class="bold row"
+              <a href="/earphones" class="bold row link"
                 >shop
                 <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
               /></a>
@@ -148,185 +148,64 @@
           </div>
         </div>
       </div>
-      <div class="bg_hero">
-        <img src="./assets/home/mobile/image-header.jpg" alt="" />
-      </div>
-      <div class="col col_1">
-        <p class="normal">new product</p>
-        <p class="bold">xx99 mark ii headphones</p>
-        <p class="medium">
-          Experience natural, lifelike audio and exceptional build quality made
-          for the passionate music enthusiast.
-        </p>
-        <a href="#" class="bold product_btn">see product</a>
-      </div>
+      <div id="container"></div>
+      <footer>
+        <div class="col col_13">
+          <div class="logo_footer">
+            <img src="./assets/shared/desktop/logo.svg" alt="" />
+          </div>
+          <div class="col menu">
+            <li><a href="#" class="bold">home</a></li>
+            <li><a href="#" class="bold">headphones</a></li>
+            <li><a href="#" class="bold">speakers</a></li>
+            <li><a href="#" class="bold">earphones</a></li>
+          </div>
+          <div class="presentation_footer">
+            <p class="medium">
+              Audiophile is an all in one stop to fulfill your audio needs.
+              We're a small team of music lovers and sound specialists who are
+              devoted to helping you get the most out of personal audio. Come
+              and visit our demo facility - we’re open 7 days a week.
+            </p>
+          </div>
+          <div class="copyright">
+            <p class="bold">Copyright 2021. All Rights Reserved</p>
+          </div>
+          <div class="row row_2">
+            <li>
+              <a href="#"
+                ><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z"
+                    fill-rule="nonzero"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><svg width="24" height="20" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M24 2.557a9.83 9.83 0 01-2.828.775A4.932 4.932 0 0023.337.608a9.864 9.864 0 01-3.127 1.195A4.916 4.916 0 0016.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 011.671 1.149a4.93 4.93 0 001.523 6.574 4.903 4.903 0 01-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 01-2.224.084 4.928 4.928 0 004.6 3.419A9.9 9.9 0 010 17.54a13.94 13.94 0 007.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0024 2.557z"
+                    fill-rule="nonzero"
+                  />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"
+                    fill-rule="nonzero"
+                  />
+                </svg>
+              </a>
+            </li>
+          </div>
+        </div>
+      </footer>
     </div>
-    <div class="main">
-      <div class="col col_2">
-        <div class="card">
-          <div class="col wrapper_card">
-            <div class="img_card">
-              <img
-                src="./assets/shared/desktop/image-category-thumbnail-headphones.png"
-                alt=""
-              />
-            </div>
-            <div class="title_card bold">headphones</div>
-            <a href="#" class="bold row"
-              >shop
-              <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
-            /></a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="col wrapper_card">
-            <div class="img_card">
-              <img
-                src="./assets/shared/desktop/image-category-thumbnail-speakers.png"
-                alt=""
-              />
-            </div>
-            <div class="title_card bold">speakers</div>
-            <a href="#" class="bold row"
-              >shop
-              <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
-            /></a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="col wrapper_card">
-            <div class="img_card">
-              <img
-                src="./assets/shared/desktop/image-category-thumbnail-earphones.png"
-                alt=""
-              />
-            </div>
-            <div class="title_card bold">earphones</div>
-            <a href="#" class="bold row"
-              >shop
-              <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
-            /></a>
-          </div>
-        </div>
-      </div>
-      <div class="col col_3">
-        <div class="col_4">
-          <div class="col wrapper_col_4">
-            <div class="col_4_img">
-              <img src="./assets/home/mobile/image-speaker-zx9.png" alt="" />
-            </div>
-            <div class="col col_5">
-              <p class="bold">
-                zx9 <br />
-                speaker
-              </p>
-              <p class="medium">
-                Upgrade to premium speakers that are phenomynally built to
-                deliver truly remarkable sound.
-              </p>
-            </div>
-            <a href="#" class="bold product_btn">see product</a>
-          </div>
-        </div>
-        <div class="col_6">
-          <div class="col wrapper_col_6">
-            <div class="bg_col_6">
-              <img src="./assets/home/mobile/image-speaker-zx7.jpg" alt="" />
-            </div>
-            <div class="col col_7">
-              <p class="bold">zx7 speaker</p>
-              <a href="#" class="bold product_btn">see product</a>
-            </div>
-          </div>
-        </div>
-        <div class="col_8">
-          <div class="wrapper_col_8 col">
-            <img src="./assets/home/mobile/image-earphones-yx1.jpg" alt="" />
-            <div class="col col_9">
-              <div class="wrapper_col_9 col">
-                <p class="bold">yx1 earphones</p>
-                <a href="#" class="bold product_btn">see product</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col col_10">
-        <div class="col_11">
-          <div class="col wrapper_col_11">
-            <img src="./assets/shared/mobile/image-best-gear.jpg" alt="" />
-            <div class="col col_12">
-              <p class="bold">bringing you the <span>best</span> audio gear</p>
-              <p class="medium">
-                Located at the heart of New York City, Audiophile is the premier
-                store for high end headphones, earphones, speakers, and audio
-                accessories. We have a large showroom and luxury demonstration
-                rooms available for you to browse and experience a wide range of
-                our products. Stop by our store to meet some of the fantastic
-                people who make Audiophile the best place to buy your portable
-                audio equipment.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <div class="col col_13">
-        <div class="logo_footer">
-          <img src="./assets/shared/desktop/logo.svg" alt="" />
-        </div>
-        <div class="col menu">
-          <li><a href="#" class="bold">home</a></li>
-          <li><a href="#" class="bold">headphones</a></li>
-          <li><a href="#" class="bold">speakers</a></li>
-          <li><a href="#" class="bold">earphones</a></li>
-        </div>
-        <div class="presentation_footer">
-          <p class="medium">
-            Audiophile is an all in one stop to fulfill your audio needs. We're
-            a small team of music lovers and sound specialists who are devoted
-            to helping you get the most out of personal audio. Come and visit
-            our demo facility - we’re open 7 days a week.
-          </p>
-        </div>
-        <div class="copyright">
-          <p class="bold">Copyright 2021. All Rights Reserved</p>
-        </div>
-        <div class="row row_2">
-          <li>
-            <a href="#"
-              ><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z"
-                  fill-rule="nonzero"
-                />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              ><svg width="24" height="20" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M24 2.557a9.83 9.83 0 01-2.828.775A4.932 4.932 0 0023.337.608a9.864 9.864 0 01-3.127 1.195A4.916 4.916 0 0016.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 011.671 1.149a4.93 4.93 0 001.523 6.574 4.903 4.903 0 01-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 01-2.224.084 4.928 4.928 0 004.6 3.419A9.9 9.9 0 010 17.54a13.94 13.94 0 007.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0024 2.557z"
-                  fill-rule="nonzero"
-                />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="#"
-              ><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"
-                  fill-rule="nonzero"
-                />
-              </svg>
-            </a>
-          </li>
-        </div>
-      </div>
-    </footer>
     <script src="main.js"></script>
   </body>
 </html>
