--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
             <img src="./assets/shared/desktop/logo.svg" alt="" />
           </div>
           <div class="col menu">
-            <li><a href="#" class="bold">home</a></li>
-            <li><a href="#" class="bold">headphones</a></li>
-            <li><a href="#" class="bold">speakers</a></li>
-            <li><a href="#" class="bold">earphones</a></li>
+            <li><a href="/" class="bold">home</a></li>
+            <li><a href="/headphones" class="bold">headphones</a></li>
+            <li><a href="/speakers" class="bold">speakers</a></li>
+            <li><a href="/earphones" class="bold">earphones</a></li>
           </div>
           <div class="presentation_footer">
             <p class="medium">
