--- a/pages/headphones.html
+++ b/pages/headphones.html
@@ -1,4 +1,120 @@
-<div class="tab_title"><p class="bold">headphones</p></div>
+<div id="hero" class="col">
+  <div class="bg_hero">
+    <img src="./assets/home/mobile/image-header.jpg" alt="" />
+  </div>
+  <div class="col col_1">
+    <p class="normal">new product</p>
+    <p class="bold">xx99 mark ii headphones</p>
+    <p class="medium">
+      Experience natural, lifelike audio and exceptional build quality made for
+      the passionate music enthusiast.
+    </p>
+    <a href="#" class="bold product_btn">see product</a>
+  </div>
+</div>
 <div class="main">
-  <div class="col col_17"></div>
+  <div class="col col_2">
+    <div class="card">
+      <div class="col wrapper_card">
+        <div class="img_card">
+          <img
+            src="./assets/shared/desktop/image-category-thumbnail-headphones.png"
+            alt=""
+          />
+        </div>
+        <div class="title_card bold">headphones</div>
+        <a href="/headphones" class="bold row link"
+          >shop <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
+        /></a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="col wrapper_card">
+        <div class="img_card">
+          <img
+            src="./assets/shared/desktop/image-category-thumbnail-speakers.png"
+            alt=""
+          />
+        </div>
+        <div class="title_card bold">speakers</div>
+        <a href="/speakers" class="bold row link"
+          >shop <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
+        /></a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="col wrapper_card">
+        <div class="img_card">
+          <img
+            src="./assets/shared/desktop/image-category-thumbnail-earphones.png"
+            alt=""
+          />
+        </div>
+        <div class="title_card bold">earphones</div>
+        <a href="/earphones" class="bold row link"
+          >shop <img src="./assets/shared/desktop/icon-arrow-right.svg" alt=""
+        /></a>
+      </div>
+    </div>
+  </div>
+  <div class="col col_3">
+    <div class="col_4">
+      <div class="col wrapper_col_4">
+        <div class="col_4_img">
+          <img src="./assets/home/mobile/image-speaker-zx9.png" alt="" />
+        </div>
+        <div class="col col_5">
+          <p class="bold">
+            zx9 <br />
+            speaker
+          </p>
+          <p class="medium">
+            Upgrade to premium speakers that are phenomynally built to deliver
+            truly remarkable sound.
+          </p>
+        </div>
+        <a href="#" class="bold product_btn">see product</a>
+      </div>
+    </div>
+    <div class="col_6">
+      <div class="col wrapper_col_6">
+        <div class="bg_col_6">
+          <img src="./assets/home/mobile/image-speaker-zx7.jpg" alt="" />
+        </div>
+        <div class="col col_7">
+          <p class="bold">zx7 speaker</p>
+          <a href="#" class="bold product_btn">see product</a>
+        </div>
+      </div>
+    </div>
+    <div class="col_8">
+      <div class="wrapper_col_8 col">
+        <img src="./assets/home/mobile/image-earphones-yx1.jpg" alt="" />
+        <div class="col col_9">
+          <div class="wrapper_col_9 col">
+            <p class="bold">yx1 earphones</p>
+            <a href="#" class="bold product_btn">see product</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col col_10">
+    <div class="col_11">
+      <div class="col wrapper_col_11">
+        <img src="./assets/shared/mobile/image-best-gear.jpg" alt="" />
+        <div class="col col_12">
+          <p class="bold">bringing you the <span>best</span> audio gear</p>
+          <p class="medium">
+            Located at the heart of New York City, Audiophile is the premier
+            store for high end headphones, earphones, speakers, and audio
+            accessories. We have a large showroom and luxury demonstration rooms
+            available for you to browse and experience a wide range of our
+            products. Stop by our store to meet some of the fantastic people who
+            make Audiophile the best place to buy your portable audio equipment.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
