--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         </div>
       </footer>
     </div>
+    <script src="//unpkg.com/navigo"></script>
     <script src="main.js"></script>
   </body>
 </html>
